[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-sprint-planner"
version = "1.0.0"
description = "OpenEnv environment for Agile sprint planning and dynamic re-planning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn==0.30.1",
  "pydantic==2.7.1",
  "numpy==1.26.4",
  "openai==1.30.1",
  "openenv-core>=0.2.0",
  "torch==2.3.0",
  "torchaudio==2.3.0",
  "python-multipart==0.0.9",
  "httpx==0.27.0",
  "tenacity==8.3.0",
  "rich==13.7.1",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["env*", "agent*", "server*"]
