[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-sprint-planner"
version = "1.0.0"
description = "OpenEnv environment for Agile sprint planning and dynamic re-planning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn>=0.35.0,<1",
  "pydantic>=2.11.7,<3",
  "openai>=2.7.2,<3",
  "openenv-core>=0.2.0,<1",
  "tenacity>=8.3.0,<10",
]

[project.optional-dependencies]
train = [
  "numpy>=1.26,<3",
  "torch==2.6.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["env*", "agent*", "server*"]
